#145 - Samiksha/Suraj/Tanbir - fixing alignment of the editable fields.

--- a/app/assets/stylesheets/books.sass
+++ b/app/assets/stylesheets/books.sass
@@ -178,6 +178,7 @@ $form_border_radius: 2px
 #book_title
   font-size: 30px
   margin-bottom: 30px
+  width: 55%
 
 .error
   color: #EF5350
@@ -233,16 +234,21 @@ $form_border_radius: 2px
   border-radius: $form_border_radius
   height: 27px
 
+#external_url
+  margin-left: 4px
+
 .author_name
   margin-bottom: 15px
   .author_label
     width: 27%
     font-weight: bold
 
+
 .number_of_copies_label
   width: 27%
   font-weight: bold
-
+.editable_field
+  width: 25%
 
 .external_link_label
   width: 27%
@@ -308,6 +314,7 @@ div.tagsinput
   margin-right: 80px
 
 #description
+  margin-left: 25px
   .description_label
     font-size: 20px
     font-weight: bold
@@ -381,3 +388,6 @@ div.tagsinput
 #add_book_manually
   padding-top: 12%
   padding-left: 4%
+
+#save_cancel_button
+  margin-top: 110px
